--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MERGE_FILE_PATH="utils/tomerge.txt"
-FILE_UPLOAD_DIR_PATH="utils/files"
+MERGE_FILE_PATH="./utils/tomerge.txt"
+FILE_UPLOAD_DIR_PATH="./utils/files"
+IMAGES_DIR_PATH="./codeImages"
